--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,8 @@ dependencies {
     // redis client
     implementation 'org.redisson:redisson:3.17.1'
     // embedded redis
-    implementation('it.ozimov:embedded-redis:0.7.3') {
-        exclude group: "org.slf4j", module: "slf4j-simple"
-    }
+    implementation 'com.github.codemonstur:embedded-redis:1.4.1'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
